Mon Mar 15 14:36:33 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* migsupport.c (trivfs_begin_using_protid): In first branch,
	protect work against PI being null, and call ports_port_deref with
	the proper value.
	(trivfs_begin_using_control): Likewise.
	Reported by Mark Kettenis (kettenis@wins.uva.nl).
	
1999-02-06  Mark Kettenis  <kettenis@gnu.org>

	* trivfs.h (trivfs_check_access_hook): New variable.
	* fsys-getroot.c (trivfs_S_fsys_getroot): Use
	trivfs_check_acces_hook.
	* dir-lookup.c (trivfs_S_dir_lookup): Likewise.
	* file-access.c (trivfs_S_file_check_access): Likewise.

1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>

	* io-revoke.c: Add reply, reply_type args.

Tue Feb 16 05:47:57 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-revoke.c: New file.
	* Makefile (IOSRCS): Add io-revoke.c.

1999-02-12  Gordon Matzigkeit  <gord@trick.fig.org>

	* open.c (trivfs_open): Add missing `=' from last change.

1999-02-05  Mark Kettenis  <kettenis@gnu.org>

	* open.c (trivfs_open): Correctly initialize NEW->isroot.

Sun Jan 31 18:29:22 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* times.c (trivfs_set_atime, trivefs_set_mtime): Take advantage of
	new semantics for file_utimes.

1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* file-get-fs-options.c (trivfs_S_file_get_fs_options):
	fshelp_return_malloced_buffer renamed to iohelp_*.
	* fsys-get-options.c (trivfs_S_fsys_get_options): Likewise.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-lookup.c (trivfs_S_dir_lookup): Fix brainos in last change.

Tue Jul 14 16:47:28 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* dir-lookup.c (trivfs_S_dir_lookup): In null-pathname case, this
	should work even for non-directories, so actually do it, making
	this a simpler case of trivfs_S_fsys_getroot.

Thu Feb 20 13:13:13 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* protid-classes.c (trivfs_protid_portclasses,
 	trivfs_protid_nportclasses): Make common.