@@ -1,3 +1,9 @@
+1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-map-segment.c (trivfs_S_io_map): New file.
+	* io-map.c (trivfs_S_io_map): Just call trivfs_S_io_map_segment.
+	* Makefile (IOSRCS): Add io-map-segment.c.
+
 Mon Mar 15 14:36:33 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* migsupport.c (trivfs_begin_using_protid): In first branch,
